resolved spacing issues on grid

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -296,6 +296,7 @@ section {
     margin: 2rem 0;
     justify-content: space-between;
     .work {
+      margin-bottom: 4rem;
       width: calc(100% / 3 - 2rem);
       background: $black;
       display: flex;
